"""Bazel environment for TAPA."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

package(default_visibility = ["//visibility:public"])

exports_files(["nuitka_wrapper.py"])

sh_binary(
    name = "v++",
    srcs = ["v++.sh"],
)

exports_files(srcs = ["v++.sh"])

sh_binary(
    name = "v++_env",
    srcs = ["v++_env.sh"],
)

exports_files(srcs = ["v++_env.sh"])

sh_binary(
    name = "vitis_hls_env",
    srcs = ["vitis_hls_env.sh"],
)

exports_files(srcs = ["vitis_hls_env.sh"])

sh_binary(
    name = "xsc",
    srcs = ["xsc.sh"],
)
