"""Bazel environment for TAPA."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("//:VARS.bzl", "XILINX_TOOL_LEGACY_VERSION")
load("//bazel:v++_rules.bzl", "xilinx_wrapper")

package(default_visibility = ["//visibility:public"])

exports_files([
    "nuitka_wrapper.py",
    "pytest_wrapper.py",
])

xilinx_wrapper(
    name = "v++",
    argv0 = "v++",
    tool = "Vitis",
    xrt = True,
)

xilinx_wrapper(
    name = "v++_env.sh",
    tool = "Vitis",
    xrt = True,
)

xilinx_wrapper(
    name = "vitis_hls_env",
    tool = "Vitis_HLS",
)

xilinx_wrapper(
    name = "xsc_xv",
    argv0 = "xsc",
    tool = "Vivado",
)

# Use the oldest supported version to ensure compatibility
xilinx_wrapper(
    name = "xsc_legacy_rdi",
    argv0 = "xsc",
    tool = "Vivado",
    tool_version = XILINX_TOOL_LEGACY_VERSION,
)
