"""Build rules for binutils.

It is challenging to build binutils with Bazel because it is a project
with a complex dependency graph. This genrule builds binutils from source
and extracts the necessary binaries.
"""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "binutils",
    srcs = glob(["**/*"]),
    outs = ["readelf", "ld"],
    cmd = """
      bash -c "
        cd $$(dirname $(location configure)) && \
            ./configure --disable-werror --disable-nls MAKEINFO=missing && \
            sed -i 's/^MAKEINFO = .*$$/MAKEINFO = true/' Makefile && \
            make -j$$(nproc)
      "
      cp $$(dirname $(location configure))/binutils/readelf $(location readelf)
      cp $$(dirname $(location configure))/ld/ld-new $(location ld)
    """,
    local = 1,
)
