"""FPGA runtime library for TAPA."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")
load("//bazel:dpi_rules.bzl", "dpi_legacy_rdi_library", "dpi_library")

_PUBLIC_HEADERS = [
    "frt.h",
    "frt/arg_info.h",
    "frt/buffer.h",
    "frt/buffer_arg.h",
    "frt/device.h",
    "frt/devices/shared_memory_queue.h",
    "frt/devices/shared_memory_stream.h",
    "frt/stream.h",
    "frt/stream_arg.h",
    "frt/stringify.h",
    "frt/tag.h",
]

cc_library(
    name = "frt",
    srcs = [
        "frt.cpp",
        "frt/arg_info.cpp",
        "frt/devices/filesystem.h",
        "frt/devices/intel_opencl_device.cpp",
        "frt/devices/intel_opencl_device.h",
        "frt/devices/opencl_device.cpp",
        "frt/devices/opencl_device.h",
        "frt/devices/opencl_device_matcher.h",
        "frt/devices/opencl_util.h",
        "frt/devices/shared_memory_queue.cpp",
        "frt/devices/shared_memory_stream.cpp",
        "frt/devices/tapa_fast_cosim_device.cpp",
        "frt/devices/tapa_fast_cosim_device.h",
        "frt/devices/xilinx_environ.cpp",
        "frt/devices/xilinx_environ.h",
        "frt/devices/xilinx_opencl_device.cpp",
        "frt/devices/xilinx_opencl_device.h",
        "frt/stringify.cpp",
        "frt/subprocess.h",
        "frt/zip_file.h",
    ],
    hdrs = _PUBLIC_HEADERS,
    copts = [
        "-DCL_HPP_CL_1_2_DEFAULT_BUILD",
        "-DCL_HPP_TARGET_OPENCL_VERSION=120",
        "-DCL_HPP_MINIMUM_OPENCL_VERSION=120",
        "-DCL_TARGET_OPENCL_VERSION=120",
    ],
    includes = ["."],
    linkopts = [
        "-lstdc++fs",
        "-lrt",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:endian",
        "@glog",
        "@nlohmann_json//:json",
        "@tinyxml2",
        "@xilinx_xrt",
        "@yaml-cpp",
    ],
)

cc_test(
    name = "frt-test",
    size = "small",
    srcs = glob(["**/*_test.cpp"]),
    deps = [
        ":frt",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

dpi_library(
    name = "tapa_fast_cosim_dpi_xv",
    srcs = [
        "frt/devices/shared_memory_queue.cpp",
        "frt/devices/tapa_fast_cosim_dpi.cpp",
    ],
    hdrs = [
        "frt/devices/shared_memory_queue.h",
    ],
    includes = ["."],
    visibility = ["//tapa/cosim:__pkg__"],
    deps = [
        "@glog",
        "@xsim_xv//:svdpi",
    ],
)

dpi_legacy_rdi_library(
    name = "tapa_fast_cosim_dpi_legacy_rdi",
    srcs = [
        "frt/devices/shared_memory_queue.cpp",
        "frt/devices/tapa_fast_cosim_dpi.cpp",
    ],
    hdrs = [
        "frt/devices/shared_memory_queue.h",
    ],
    includes = ["."],
    visibility = ["//tapa/cosim:__pkg__"],
    deps = [
        "@glog",
        "@xsim_legacy_rdi//:svdpi",
    ],
)

filegroup(
    name = "include",
    srcs = _PUBLIC_HEADERS,
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "pkg-lib",
    srcs = [
        ":frt",
        ":tapa_fast_cosim_dpi_legacy_rdi",
        ":tapa_fast_cosim_dpi_xv",
    ],
    prefix = "usr/lib",
    strip_prefix = strip_prefix.files_only(),
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "pkg-include",
    srcs = [":include"],
    prefix = "usr/include",
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "pkg-extra-runtime-deps",
    srcs = [
        "@OpenCL",
        "@gflags",
        "@glog",
        "@tinyxml2",
        "@yaml-cpp",
    ],
    prefix = "usr/lib",
    strip_prefix = strip_prefix.files_only(),
    visibility = ["//visibility:public"],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg-include",
        ":pkg-lib",
    ],
    visibility = ["//visibility:public"],
)

pkg_filegroup(
    name = "pkg-portable",
    srcs = [
        ":pkg",
        ":pkg-extra-runtime-deps",
    ],
    visibility = ["//visibility:public"],
)
