"""Build file for TAPA's specific version of LLVM."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

package(default_visibility = ["//visibility:public"])
