"""Build file for tapacc's dependency header files."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//bazel:header_extractor.bzl", "header_extractor")

cc_library(
    name = "tapa-deps",
    deps = [
        "//fpga-runtime:frt",
        "@com_github_google_glog//:glog",
    ],
)

header_extractor(
    name = "tapa-system-include",
    visibility = ["//visibility:public"],
    deps = [
        ":tapa-deps",
        "@llvm_toolchain_llvm//:include",
    ],
)

pkg_files(
    name = "pkg",
    srcs = [":tapa-system-include"],
    prefix = "usr/share/tapa/system-include",
    strip_prefix = strip_prefix.from_pkg("tapa-system-include"),
    visibility = ["//visibility:public"],
)
