"""Build file for tapacc's dependency header files."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//bazel:header_extractor.bzl", "header_extractor")

header_extractor(
    name = "tapa-system-include",
    visibility = ["//visibility:public"],
    deps = [
        "@tapa-llvm-project//clang:builtin_headers_gen",
    ],
)

header_extractor(
    name = "tapa-extra-runtime-include",
    visibility = ["//visibility:public"],
    deps = ["//tapa-lib:tapa"],
)

pkg_files(
    name = "pkg",
    srcs = [":tapa-system-include"],
    prefix = "usr/share/tapa/system-include",
    strip_prefix = strip_prefix.from_pkg("tapa-system-include"),
    visibility = ["//visibility:public"],
)
